<resources>
    <string name="jiangxi">江西</string>
    <string name="yuandong">远东</string>
    <string name="network_err">请检查网络连接</string>
    <string name="tasktype_survey">查勘</string>
    <string name="tasktype_repeat">复勘</string>
    <string name="tasktype_recommend">推修</string>
    <string name="tasktype_diaodu">调度</string>
    <string name="tasktype_large">大案</string>
    <string name="tasktype_danger">风险</string>
    <string name="tasktype_overhaul">拆检</string>
    <string name="app_name">手机查勘</string>
    <string name="app_run">正在后台运行</string>
    <string name="app_name_recommend">维修管理</string>
    <string name="app_name_large">区域督导</string>
    <string name="app_name_danger">风险调查</string>
    <string name="app_name_overhaul">手机拆检</string>
    <string name="app_settingsystem">系统设置</string>
    <string name="app_login">用户登录</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="seen_more">更多</string>
    <string name="drop_dowm">下拉刷新</string>
    <string name="release_update">松开刷新</string>
    <string name="loading">正在加载...</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_positive">确定</string>
    <string name="dialog_negative">取消</string>
    <string name="dialog_titlemess">请输入估损金额</string>
    <string name="title_button_cancel">取消</string>
    <string name="title_send">上报</string>
    <string name="title_report_next">下一步</string>
    <string name="title_report_pre">上一步</string>
    <string name="title_positive">确定</string>
    <string name="title_finish">完成</string>
    <string name="car">车牌:</string>
    <string name="survey">查员:</string>
    <string name="carmaster">车主:</string>
    <string name="time">案发时间:</string>
    <string name="link">关联案件:</string>
    <string name="repair_time">推修时间:</string>
    <string name="address">案发地点:</string>
    <string name="PaymentAmount">公估费:%1$s</string>
    <string name="isrisk">风险案件:此案为风险案件</string>
    <string name="casenumber">案件号:</string>
    <string name="verify">审核员:</string>
    <string name="phone">联系电话:</string>
    <string name="memo">案发描述:</string>
    <string name="reply">回　　复:</string>
    <string name="jxpa">江西平安</string>
    <string name="login_user">帐号</string>
    <string name="login_pass">密码</string>
    <string name="login_button">登　　陆</string>
    <string name="login_mess">请检查用户名或密码是否填写</string>
    <string name="login_error">登录失败</string>
    <string name="login_edituser">请输入帐号</string>
    <string name="login_editpass">请输入密码</string>
    <string name="login_setIP">系统设置</string>
    <string name="login_illegitmacy">该用户没有权限登录，请联系管理员。</string>
    <string name="login_neterror">网络连接错误</string>
    <string name="main_current_task">当前任务</string>
    <string name="main_finish_task">完成任务</string>
    <string name="main_all_task">所有任务</string>
    <string name="main_delete_task">删除任务</string>
    <string name="main_cretae_task">创建任务</string>
    <string name="main_into_task">导入任务</string>
    <string name="main_set_task">系统设置</string>
    <string name="main_pushmessage_task">消息列表</string>
    <string name="main_delete_button">删除</string>
    <string name="main_cancel_button">取消</string>
    <string name="main_dialog_mess">确定要删除已选项</string>
    <string name="main_current_nocase">您当前没有任务</string>
    <string name="main_finish_nocase">您没有已完成任务</string>
    <string name="main_all_nocase">您当前没有任务</string>
    <string name="main_delete_nocase">您没有可删除任务</string>
    <string name="main_create_message_success">您有新的短信任务</string>
    <string name="main_newtrends">有新的案件信息</string>
    <string name="main_yang">￥</string>
    <string name="main_exit">再按一次返回键将关闭程序</string>
    <string name="main_notnet">网络不能连接到服务器</string>
    <string name="main_loading">正在同步数据...</string>
    <string name="ui_cancel_button">取消</string>
    <string name="casedetails_picture">案件照片</string>
    <string name="casedetails_edit">编辑</string>
    <string name="casedetails_userphone">用户电话</string>
    <string name="casedetails_repair">案件推修</string>
    <string name="casedetails_finishcase">完成任务</string>
    <string name="casedetails_more">更多</string>
    <string name="casedetails_danger">风险上报</string>
    <string name="casedetails_dependence">关联案件</string>
    <string name="casedetails_large">大案上报</string>
    <string name="casedetails_success">是否完成任务</string>
    <string name="casedetails_fail">完成任务失败</string>
    <string name="casedetails_cleartask_suc">销案成功！</string>
    <string name="casedetails_cleartask_tips">确认要销案？</string>
    <string name="casedetails_cleartask_fail">销案失败！</string>
    <string name="casedetails_off">取消</string>
    <string name="casedetails_sure">确定</string>
    <string name="casedetails_nomomey">估损金额不能为空</string>
    <string name="casedetails_form">输入的金额非法</string>
    <string name="casedetails_send">发送</string>
    <string name="casedetails_largedangerfail">回复失败</string>
    <string name="casedetails_nopicture">当前没有照片</string>
    <string name="casedetails_already">已推修</string>
    <string name="casedetails_alreadycreate">任务已创建</string>
    <string name="casedetails_alreadyestprice">您已估过估损金额</string>
    <string name="largerdangercasedetails_nomess">请填写处理意见</string>
    <string name="casedetails_cardriver">驾驶员:%1$s</string>
    <string name="casedetails_accident">事故类型:%1$s</string>
    <string name="casedetails_casetype">案件类型:%1$s</string>
    <string name="casedetails_insurancetype">保险险种:%1$s</string>
    <string name="casedetails_cartype">车辆品牌:%1$s</string>
    <string name="casedetails_insuranceContactPeople">保险联系人:%1$s</string>
    <string name="casedetails_insuranceContactPhone">保险电话:%1$s</string>
    <string name="casedetails_AccidentDescribe">事故经过:%1$s</string>
    <string name="casedetails_memo">备注:%1$s</string>
    <string name="casedetails_dialog_refuse_case">是否拒绝任务</string>
    <string name="casedetails_thirdcar">三者车牌:%1$s</string>
    <string name="casedetails_linkcase">连接案件:%1$s</string>
    <string name="casedetails_Insurancer">保险公司:%1$s</string>
    <string name="casedetails_thirdcar_dialog">请输入第三者车牌</string>
    <string name="casedetails_picturenoupdateload">照片没有上传完成，不能完成任务</string>
    <string name="casedetails_picturenoupdateload_upload">发现有照片未加入到上传队列，现已加入上传队列。请等待上传完毕再完成任务。</string>
    <string name="casedetails_picture_lose">照片有丢失，是否继续完成任务</string>
    <string name="casemanage_receive">接收任务</string>
    <string name="casemanage_sanzhereceive">三者车接受任务</string>
    <string name="casemanage_biaodireceive">标的接受任务</string>
    <string name="casemanage_refuse">拒绝任务</string>
    <string name="casemanage_dialog_refuse_fail">拒绝任务失败</string>
    <string name="casemanage_dialog_refuse_success">拒绝任务成功</string>
    <string name="casemanage_userphone">用户电话</string>
    <string name="casemanage_button">更多维修厂</string>
    <string name="casemanage_sanzhe">三者</string>
    <string name="casemanage_biaodi">标的</string>
    <string name="report_councilor">区域督导</string>
    <string name="report_danger">风险调查员</string>
    <string name="report_copy">抄送</string>
    <string name="report_describe">案件描述</string>
    <string name="report_dialog_mess">上报失败</string>
    <string name="report_nocopy">没有抄送人</string>
    <string name="report_nocouncilor">没有督导</string>
    <string name="report_estpricefail">估损失败</string>
    <string name="report_checkoutcouncilor">请检查上报信息是否完整</string>
    <string name="report_needcouncilor">督导为必选项</string>
    <string name="report_case_process1">事故经过</string>
    <string name="report_case_process2">现场查勘情况</string>
    <string name="report_case_process3">两证核实情况</string>
    <string name="report_case_process4">案件疑点</string>
    <string name="report_case_process5">案件后续处理</string>
    <string name="report_case_process6">维修去向及损失预估</string>
    <string name="report_case_process7">照片信息</string>
    <string name="report_case_process1_num1">一、</string>
    <string name="report_case_process2_num2">二、</string>
    <string name="report_case_process3_num3">三、</string>
    <string name="report_case_process4_num4">四、</string>
    <string name="report_case_process5_num5">五、</string>
    <string name="report_case_process6_num6">六、</string>
    <string name="report_case_process_content_default">无</string>
    <string name="report_case_ok">完成</string>
    <string name="report_case_tips_title">提示</string>
    <string name="report_case_tips_sure">确定</string>
    <string name="report_case_tips_cancel">取消</string>
    <string name="report_case_photo_choose">选择</string>
    <string name="report_case_photo_preview">预览</string>
    <string name="report_case_tips_content">您还没有填写完毕，确认退出？</string>
    <string name="report_report">关于案件</string>
    <string name="report_report_send">上报</string>
    <string name="createcase_survey">查　勘</string>
    <string name="createcase_repeat">复　勘</string>
    <string name="createcase_casenu">案\u0020\u0020件\u0020\u0020号:</string>
    <string name="createcase_carnu">车\u0020\u0020牌\u0020\u0020号:</string>
    <string name="createcase_owner">车主姓名:</string>
    <string name="createcase_pilot">驾\u0020\u0020驶\u0020\u0020员:</string>
    <string name="createcase_phone">车主电话:</string>
    <string name="createcase_address">事故地点:</string>
    <string name="createcase_create">创建任务</string>
    <string name="createcase_yuandong_mess">车牌号，保险公司为必填项，请填写完整</string>
    <string name="createcase_jiangxi_mess">车牌号，案件号为必填项，请填写完整</string>
    <string name="createcase_success">是否创建该任务</string>
    <string name="createcase_fail">已存在此案件</string>
    <string name="createcase_cooperation">保单类型</string>
    <string name="createcase_yescooperation">车行保单</string>
    <string name="createcase_nocooperation">非车行保单</string>
    <string name="createcase_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-</string>
    <string name="createcase_outstrip">长度太长，请重新输入</string>
    <string name="createcase_zifu_caseno">案件号中不能带特殊字符</string>
    <string name="createcase_zifu_carmark">车牌号中不能带特殊字符</string>
    <string name="current_layout_list_casenu">案    件    号:</string>
    <string name="current_layout_list_car">车    牌    号:</string>
    <string name="current_layout_list_time">案发时间:</string>
    <string name="current_layout_list_address">案发地点:</string>
    <string name="current_layout_list_right">(</string>
    <string name="current_layout_list_nuright">)</string>
    <string name="current_layout_list_mess">请检查是否勾选督导员</string>
    <string name="repair_already">已　　去</string>
    <string name="repair_noKnow">未　　知</string>
    <string name="repair_change">更　　换</string>
    <string name="repair_phone">用户电话</string>
    <string name="repair_garages">维修厂家:</string>
    <string name="repair_call_phone">去电客户</string>
    <string name="repair_verify">请确认估损金额</string>
    <string name="intocase_create">创建短信任务</string>
    <string name="intocase_clear">清除所选</string>
    <string name="intocase_time">时　　间:</string>
    <string name="intocase_mes">信息内容:</string>
    <string name="intocase_phone">电话号码:</string>
    <string name="intocase_maximum">最多只能选择三条短信</string>
    <string name="intocase_nosame">不为同不一电话号的短信不能合并</string>
    <string name="intocase_nomess">短信不能不空，不能创建任务</string>
    <string name="intocase_errorform">短信格式不正确，无法创建短信任务</string>
    <string name="intocase_success">是否要创建任务</string>
    <string name="intocase_alreadycreate">该任务已创建</string>
    <string name="intocase_error">创建短信任务，失败</string>
    <string name="settingip_ip">IP设置:</string>
    <string name="settingip_pwph">幅　面:　</string>
    <string name="settingip_FPS">帧　率:　</string>
    <string name="settingip_BIT">码　率:　</string>
    <string name="setting_ip_format">(例IP地址格式为:192.168.1.119:3000)</string>
    <string name="receptionist_sure">确　　定</string>
    <string name="receptionist_editext">维修金额</string>
     <string name="refusecasedialog_hint">温馨提示</string>
    <string name="refusecasedialog_exit">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020案件:%1$s已调试给其他查勘员,请点击确认拒绝掉该案件</string>
    <string name="refusecasedialog_sure">确   定 </string>
</resources>