<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="150dp"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialoghint"
        style="@style/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/refusecasedialog_hint"  />

    <TextView
        android:id="@+id/content"
        style="@style/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="left"
        android:layout_below="@id/dialoghint"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="10dip"
         android:text="@string/refusecasedialog_exit" />

    <Button
        android:id="@+id/button"
        style="?attr/large_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="30dp"
        android:paddingLeft="50dip"
        android:paddingRight="50dip"
        android:text="@string/refusecasedialog_sure" />

</RelativeLayout>