<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
         android:layout_height="0dp"
           android:layout_margin="20dip"
            android:layout_weight="0.2">

        <EditText
            android:id="@+id/report_mail_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/default_edittext_shape"
            android:gravity="left|top"
            android:hint="@string/report_case_process1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/report_mail_pre"
            style="?attr/large_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/title_report_pre" />

        <Button
            android:id="@+id/report_mail_next"
            style="?attr/large_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/title_report_next" />
    </LinearLayout>

</LinearLayout>