<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <GridView
        android:id="@+id/gridview"
        style="@style/listView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:fadeScrollbars="true"
        android:numColumns="3" >
    </GridView>

    <LinearLayout
        android:id="@+id/nopicture_layout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/nopicture_image"
            android:layout_width="@dimen/cry_logo_size"
            android:layout_height="@dimen/cry_logo_size"
            android:src="@drawable/cry_logo" />

        <TextView
            style="@style/cry_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casedetails_nopicture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/report_mail_pre"
            style="?attr/large_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/title_report_pre" />

        <Button
            android:id="@+id/report_mail_next"
            style="?attr/large_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/title_report_next" />
    </LinearLayout>

</LinearLayout>