<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <com.whhcxw.ui.Titlebar2
        xmlns:custom="http://schemas.android.com/apk/res/com.whhcxw.MobileCheck"
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        custom:titlebarBackground="?attr/titlebar_backgroud"
        custom:titlebarLeftBackground="?attr/titlebar_left_backgroud"
        custom:titlebarRightBackground="?attr/titlebar_right_backgroud" />
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" >

                <EditText
                    android:id="@+id/ip"
                    style="@style/settingip_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/default_edittext_height" />

                <TextView
                    style="@style/createcase_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_edittext_height"
                    android:text="@string/settingip_ip" />
            </RelativeLayout>

            <TextView 
                style="@style/createcase_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/setting_ip_format" />
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" >

                <EditText
                    android:id="@+id/FPS"
                    style="@style/settingip_edittext"
                    android:layout_width="fill_parent"
					android:inputType="number"
                    android:layout_height="@dimen/default_edittext_height" />

                <TextView
                    style="@style/createcase_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_edittext_height"
                    android:text="@string/settingip_FPS" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" >

                <EditText
                    android:id="@+id/BIT"
                    style="@style/settingip_edittext"
                    android:layout_width="fill_parent"
                    android:inputType="number"
                    android:layout_height="@dimen/default_edittext_height" />

                <TextView
                    style="@style/createcase_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_edittext_height"
                    android:text="@string/settingip_BIT" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" >

                <Spinner
                    android:id="@+id/pw_ph"
                    style="@style/settingip_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/default_edittext_height" />

                <TextView
                    style="@style/createcase_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_edittext_height"
                    android:text="@string/settingip_pwph" />
                
                <ImageView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:src="@drawable/settingip_triangle"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>