<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_casedetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg" >

    <com.whhcxw.ui.Titlebar2
       xmlns:custom="http://schemas.android.com/apk/res/com.whhcxw.MobileCheck"
        android:id="@+id/titlebar"
        custom:titlebarBackground="?attr/titlebar_backgroud"
        custom:titlebarLeftBackground="?attr/titlebar_left_backgroud"
        custom:titlebarRightBackground="?attr/titlebar_right_backgroud"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/casemes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar" >

        <LinearLayout
            android:id="@+id/casedetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dip"
            android:background="@drawable/casedetails_bg"
            android:orientation="vertical"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingRight="5dip"
            android:paddingTop="13dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/car_text"
                            style="@style/casedetail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/car" />

                        <TextView
                            android:id="@+id/car"
                            style="@style/casedetail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/carmaster_text"
                            style="@style/casedetail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carmaster" />

                        <TextView
                            android:id="@+id/carmaster"
                            style="@style/casedetail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/casenumber_text"
                            style="@style/casedetail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/casenumber" />

                        <TextView
                            android:id="@+id/casenumber"
                            style="@style/casedetail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/phone_text"
                            style="@style/casedetail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone" />

                        <TextView
                            android:id="@+id/phone"
                            style="@style/casedetail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/time_text"
                    style="@style/casedetail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/time"
                    style="@style/casedetail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/address_text"
                    style="@style/casedetail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/address"
                    style="@style/casedetail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="80dip"
            android:layout_height="30dip"
            android:paddingTop="8dip"
            android:scaleType="centerInside"
            android:src="@drawable/case_details_loop" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_below="@id/casedetails"
            android:background="@color/case_line" />
    </RelativeLayout>
    
    <EditText
        android:id="@+id/moneyText"
        style="@style/default_edittext"
        android:layout_width="fill_parent"
		android:layout_marginTop="20dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="20dip"
        android:layout_height="40dp"
        android:layout_below="@id/casemes"
        android:numeric="integer"
        android:hint="@string/receptionist_editext"
        android:scrollHorizontally="true"
        android:singleLine="true" />
    

    <Button
        android:id="@+id/button"
        style="?attr/large_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/moneyText"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dip"
        android:text="@string/receptionist_sure" />

</RelativeLayout>